RESOLVED FIXED65912
Web Inspector: assertion failure in InspectorDOMStorageResource::bind when opening inspector
https://bugs.webkit.org/show_bug.cgi?id=65912
Summary Web Inspector: assertion failure in InspectorDOMStorageResource::bind when op...
Andrey Kosyakov
Reported 2011-08-09 05:41:51 PDT
1. run debug build 2. open web inspector 3. observe inspected page crash The assertion in InspectorDOMStorageResource.cpp:71 is hit.
Attachments
patch (1.21 KB, patch)
2011-08-09 05:44 PDT, Andrey Kosyakov
no flags
Andrey Kosyakov
Comment 1 2011-08-09 05:44:58 PDT
Pavel Feldman
Comment 2 2011-08-09 05:59:21 PDT
Comment on attachment 103349 [details] patch This subtle change definitely requires a test!
Andrey Kosyakov
Comment 3 2011-08-09 06:16:25 PDT
(In reply to comment #2) > (From update of attachment 103349 [details]) > This subtle change definitely requires a test! This is difficult to test with current harness, as the agent is enabled very early in the front-end initialization. Raised Bug 65914 for protocol test framework.
Andrey Kosyakov
Comment 4 2011-08-09 06:24:33 PDT
Comment on attachment 103349 [details] patch Clearing flags on attachment: 103349 Committed r92678: <http://trac.webkit.org/changeset/92678>
Andrey Kosyakov
Comment 5 2011-08-09 06:24:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.