Web Inspector: assertion failure in InspectorDOMStorageResource::bind when opening inspector https://bugs.webkit.org/show_bug.cgi?id=65912

Reviewed by Pavel Feldman.

* inspector/InspectorDOMStorageAgent.cpp:
(WebCore::InspectorDOMStorageAgent::didUseDOMStorage):

Canonical link: https://commits.webkit.org/81764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92678 268f45cc-cd09-0410-ab3c-d52691b4dbfc